2007-01-07  Eric Hodel  <drbrain@segment7.net>

	* Rakefile: Include GPL.txt.  Fixes bug #7572 by David Lee.

2007-01-06  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.9.0.9.

	* lib/rubygems/specification.rb
	(Gem::Specification::test_suite_file): Rewrote default_executable
	to be a bit more explicit.
	(Gem::Specification::add_bindir): Rewrote the 'files' accessor to
	handle pathologically bad input.
	(Gem::Specification::copy_of): Added as_array private method.

	* Rakefile (package_version): Added '*.out' to clobber list.
	Removed the broken-1.0.0.gem file from the clobber list.

	* test/test_specification.rb
	(TestSpecification::test_default_executable):
	Seriously beefed up tests for certain specification issues.

	* test/gemenvironment.rb (TestEnvironment::create): Added the 'f'
	flag to deleting 'gemhome'.

2006-12-30  Eric Hodel  <drbrain@segment7.net>

	* post-install.rb, lib/rubygems/server.rb: RubyGems now installs RDoc
	and ri for itself.

2006-12-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::Installer#build_extensions):
	Extension build failures now raise Gem::Installer::ExtensionBuildErrors.

2006-12-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb (Gem::Package::TarInput#initialize): Bad
	packages now raise FormatError instead of a generic RuntimeError.
	* lib/rubygems/installer.rb (Gem::Installer#install): Raise an
	InstallError when we have a bad gem file.

2006-12-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/custom_require.rb (Gem::GemPathSearcher::find):
	Removed SUFFIX_PATTERN.  Evidently this was miss during an earlier
	attempt to remove it.
	(Gem::GemPathSearcher::matching_file): Changed reference to
	SUFFIX_PATTERN into a call to Gem.suffix_pattern.

	* Removed tab characters from numerous source files.
	
	* lib/rubygems/installer.rb (Gem::Uninstaller::uninstall): Removed
	stray tab characters.
